correct test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,7 +7,6 @@ on:
   pull_request:
     branches:
       - main
-
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -15,6 +14,18 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set environment variables
+        run: |
+          echo "REDIS_URL=redis://redis:6379/0" >> $GITHUB_ENV
+          echo "CELERY_BROKER_URL=redis://redis:6379/0" >> $GITHUB_ENV
+          echo "CELERY_RESULT_BACKEND=redis://redis:6379/0" >> $GITHUB_ENV
+          echo "POSTGRES_USER=postgres" >> $GITHUB_ENV
+          echo "POSTGRES_PASSWORD=postgres" >> $GITHUB_ENV
+          echo "POSTGRES_DB=analyzer" >> $GITHUB_ENV
+          echo "DATABASE_URL=postgresql+asyncpg://postgres:postgres@db:5432/analyzer" >> $GITHUB_ENV
+          echo "LOG_LEVEL=DEBUG" >> $GITHUB_ENV
+          echo "INFURA_KEY=${{ secrets.INFURA_KEY }}" >> $GITHUB_ENV
 
       - name: Set up Docker
         run: |
