--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -66,4 +66,23 @@ jobs:
 
       - name: Install dependencies inside Docker container
         run: |
-          docker compose -f docker/docker_compose.yml -p test_pool exec
+          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install --upgrade pip
+          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install -r tests/requirements_test.txt
+
+      - name: Run tests inside Docker container
+        run: |
+          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pytest --disable-warnings --junitxml=/app/report.xml
+
+      - name: Copy test report from container
+        run: |
+          docker cp $(docker compose -f docker/docker_compose.yml -p test_pool ps -q api):/app/report.xml ./report.xml
+
+      - name: Upload test reports
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
+          path: report.xml
+
+      - name: Shut down Docker Compose services
+        run: |
+          make clean
