correct actions (update docker.api)

--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -3,8 +3,9 @@ FROM python:3.9-slim
 
 WORKDIR /app
 COPY requirements.txt .
-RUN apt-get update && apt-get install -y curl
+COPY test/requirements_test.txt test/.
 RUN pip install --no-cache-dir -r requirements.txt
+RUN apt-get update && apt-get install -y curl
 COPY . /app
 
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
