--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -3,7 +3,7 @@ FROM python:3.9-slim
 
 WORKDIR /app
 COPY requirements.txt .
-COPY test/requirements_test.txt test/.
+COPY test/requirements_test.txt /app/test/.
 RUN pip install --no-cache-dir -r requirements.txt
 RUN apt-get update && apt-get install -y curl
 COPY . /app
