--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -4,10 +4,9 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
-COPY tests/requirements_test.txt /app/test/.
+COPY tests/requirements_test.txt tests/.
 
 RUN pip install --no-cache-dir -r requirements.txt
-RUN pip install --no-cache-dir -r /app/test/requirements_test.txt
 
 RUN apt-get update && apt-get install -y curl
 COPY . /app
