--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -4,6 +4,8 @@ FROM python:3.9-slim
 WORKDIR /app
 
 COPY requirements.txt .
+
+RUN mkdir -p tests
 COPY tests/requirements_test.txt tests/.
 
 RUN pip install --no-cache-dir -r requirements.txt
