--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -3,6 +3,8 @@ FROM python:3.9-slim
 
 WORKDIR /app
 
+COPY tests/ /app/tests/
+
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
