update test.yml and dockerfile.api

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -67,7 +67,7 @@ jobs:
       - name: Install dependencies inside Docker container
         run: |
           docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install --upgrade pip
-          docker compose -f docker/docker_compose.yml -p test_pool exec -T api sh -c "cd /app && pip install -r tests/requirements_test.txt"
+          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install -r requirements.txt
 
       - name: Run tests inside Docker container
         run: |
