--- a/docker/Dockerfile.api
+++ b/docker/Dockerfile.api
@@ -7,6 +7,6 @@ COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
 RUN apt-get update && apt-get install -y curl
-COPY . /app
+COPY .. /app
 
 CMD ["uvicorn", "api.main:app", "--host", "0.0.0.0", "--port", "8000"]
