correct test.yml

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -71,11 +71,10 @@ jobs:
       - name: Install dependencies inside Docker container
         run: |
           docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install --upgrade pip
-          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install -r requirements.txt
+          docker compose -f docker/docker_compose.yml -p test_pool exec -T api pip install -r tests/requirements_test.txt
 
       - name: Run tests inside Docker container
         run: |
-          docker compose exec -T api pwd
           docker compose exec api pytest /app/tests/ --disable-warnings --junitxml=/app/report.xml
 
       - name: Copy test report from container
